--- a/languages/en/strings/stats.xml
+++ b/languages/en/strings/stats.xml
@@ -1,160 +1,224 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <root>
-  <extra>
-    <base>Basic Attributes</base>
-    <cross>Cross Attributes</cross>
-    <nexus>Nexus</nexus>
-    <skills>Skills</skills>
-    <pickpoints>Pickpoints</pickpoints>
-  </extra>
-  <base>
-    <phy>
-      <name>Physique</name>
-      <shortname>phy</shortname>
-    </phy>
-    <coo>
-      <name>Coordination</name>
-      <shortname>coo</shortname>
-    </coo>
-    <rea>
-      <name>Reasoning</name>
-      <shortname>rea</shortname>
-    </rea>
-    <will>
-      <name>Will</name>
-      <shortname>wil</shortname>
-    </will>
-    <inst>
-      <name>Instinct</name>
-      <shortname>ins</shortname>
-    </inst>
-    <vit>
-      <name>Vitality</name>
-      <shortname>vit</shortname>
-    </vit>
-  </base>
-  <cross>
-    <might>
-      <name>Might</name>
-      <shortname>mig</shortname>
-    </might>
-    <matter>
-      <name>Matter</name>
-      <shortname>mat</shortname>
-    </matter>
-    <tough>
-      <name>Toughness</name>
-      <shortname>tou</shortname>
-    </tough>
-    <charm>
-      <name>Charm</name>
-      <shortname>cha</shortname>
-    </charm>
-    <react>
-      <name>Reaction</name>
-      <shortname>reac</shortname>
-    </react>
-    <perc>
-      <name>Perception</name>
-      <shortname>per</shortname>
-    </perc>
-    <rat>
-      <name>Rationality</name>
-      <shortname>rat</shortname>
-    </rat>
-    <dext>
-      <name>Dexterity</name>
-      <shortname>dex</shortname>
-    </dext>
-    <eth>
-      <name>Ethereality</name>
-      <shortname>eth</shortname>
-    </eth>
-  </cross>
-  <misc>
-    <material>
-      <name>Material Points</name>
-      <shortname>matp</shortname>
-    </material>
-    <ethereal>
-      <name>Ethereal Points</name>
-      <shortname>ethp</shortname>
-    </ethereal>
-    <carry>
-      <name>Carry Capacity</name>
-      <shortname>Load</shortname>
-    </carry>
-    <food>
-      <name>Food Level</name>
-      <shortname>food</shortname>
-    </food>
-  </misc>
-  <nexus>
-    <human>
-      <name>Human</name>
-      <shortname>hum</shortname>
-    </human>
-    <animal>
-      <name>Animal</name>
-      <shortname>ani</shortname>
-    </animal>
-    <vegetal>
-      <name>Vegetal</name>
-      <shortname>veg</shortname>
-    </vegetal>
-    <inorganic>
-      <name>Inorganic</name>
-      <shortname>ino</shortname>
-    </inorganic>
-    <artificial>
-      <name>Artificial</name>
-      <shortname>art</shortname>
-    </artificial>
-    <magic>
-      <name>Magic</name>
-      <shortname>magn</shortname>
-    </magic>
-  </nexus>
-  <skills>
-    <attack>
-      <name>Attack</name>
-      <shortname>att</shortname>
-    </attack>
-    <defense>
-      <name>Defense</name>
-      <shortname>def</shortname>
-    </defense>
-    <harvest>
-      <name>Harvest</name>
-      <shortname>har</shortname>
-    </harvest>
-    <alch>
-      <name>Alchemy</name>
-      <shortname>alc</shortname>
-    </alch>
-    <magic>
-      <name>Magic</name>
-      <shortname>mag</shortname>
-    </magic>
-    <potion>
-      <name>Potion</name>
-      <shortname>pot</shortname>
-    </potion>
-    <summon>
-      <name>Summoning</name>
-      <shortname>sum</shortname>
-    </summon>
-    <manu>
-      <name>Manufacturing</name>
-      <shortname>man</shortname>
-    </manu>
-    <crafting>
-      <name>Crafting</name>
-      <shortname>cra</shortname>
-    </crafting>
-    <overall>
-      <name>Overall</name>
-      <shortname>oa</shortname>
-    </overall>
-  </skills>
+   <extra>
+      <base>Basic Attributes</base>
+      <cross>Cross Attributes</cross>
+      <nexus>Nexus</nexus>
+      <skills>Skills</skills>
+      <pickpoints>Pickpoints</pickpoints>
+   </extra>
+   <base>
+      <phy>
+         <name>Physique</name>
+         <shortname>phy</shortname>
+      </phy>
+      <coo>
+         <name>Coordination</name>
+         <shortname>coo</shortname>
+      </coo>
+      <rea>
+         <name>Reasoning</name>
+         <shortname>rea</shortname>
+      </rea>
+      <will>
+         <name>Will</name>
+         <shortname>wil</shortname>
+      </will>
+      <inst>
+         <name>Instinct</name>
+         <shortname>ins</shortname>
+      </inst>
+      <vit>
+         <name>Vitality</name>
+         <shortname>vit</shortname>
+      </vit>
+   </base>
+   <cross>
+      <pp>
+         <name>Pickpoints</name>
+         <shortname>pp</shortname>
+      </pp>
+      <xattr_1>
+         <name></name>
+         <shortname></shortname>
+      </xattr_1>
+      <xattr_2>
+         <name></name>
+         <shortname></shortname>
+      </xattr_2>
+      <carry>
+         <name>Carry</name>
+         <shortname>car</shortname>
+      </carry>
+      <charm>
+         <name>Charm</name>
+         <shortname>cha</shortname>
+      </charm>
+      <dext>
+         <name>Dexterity</name>
+         <shortname>dex</shortname>
+      </dext>
+      <eth>
+         <name>Ethereality</name>
+         <shortname>eth</shortname>
+      </eth>
+      <xattr_7>
+         <name></name>
+         <shortname></shortname>
+      </xattr_7>
+      <xattr_8>
+         <name></name>
+         <shortname></shortname>
+      </xattr_8>
+      <xattr_9>
+         <name></name>
+         <shortname></shortname>
+      </xattr_9>
+      <magd>
+         <name>Magic Defense</name>
+         <shortname>m_d</shortname>
+      </magd>
+      <xattr_11>
+         <name></name>
+         <shortname></shortname>
+      </xattr_11>
+      <mago>
+         <name>Magic Offense</name>
+         <shortname>m_o</shortname>
+      </mago>
+      <xattr_13>
+         <name></name>
+         <shortname></shortname>
+      </xattr_13>
+      <matter>
+         <name>Matter</name>
+         <shortname>mat</shortname>
+      </matter>
+      <might>
+         <name>Might</name>
+         <shortname>mig</shortname>
+      </might>
+      <perc>
+         <name>Perception</name>
+         <shortname>per</shortname>
+      </perc>
+      <rat>
+         <name>Rationality</name>
+         <shortname>rat</shortname>
+      </rat>
+      <react>
+         <name>Reaction</name>
+         <shortname>reac</shortname>
+      </react>
+      <xattr_19>
+         <name></name>
+         <shortname></shortname>
+      </xattr_19>
+      <xattr_20>
+         <name></name>
+         <shortname></shortname>
+      </xattr_20>
+      <xattr_21>
+         <name></name>
+         <shortname></shortname>
+      </xattr_21>
+      <tough>
+         <name>Toughness</name>
+         <shortname>tou</shortname>
+      </tough>
+   </cross>
+   <misc>
+      <material>
+         <name>Material Points</name>
+         <shortname>matp</shortname>
+      </material>
+      <ethereal>
+         <name>Ethereal Points</name>
+         <shortname>ethp</shortname>
+      </ethereal>
+      <carry>
+         <name>Carry Capacity</name>
+         <shortname>Load</shortname>
+      </carry>
+      <food>
+         <name>Food Level</name>
+         <shortname>food</shortname>
+      </food>
+   </misc>
+   <nexus>
+      <human>
+         <name>Human</name>
+         <shortname>hum</shortname>
+      </human>
+      <animal>
+         <name>Animal</name>
+         <shortname>ani</shortname>
+      </animal>
+      <vegetal>
+         <name>Vegetal</name>
+         <shortname>veg</shortname>
+      </vegetal>
+      <inorganic>
+         <name>Inorganic</name>
+         <shortname>ino</shortname>
+      </inorganic>
+      <artificial>
+         <name>Artificial</name>
+         <shortname>art</shortname>
+      </artificial>
+      <magic>
+         <name>Magic</name>
+         <shortname>magn</shortname>
+      </magic>
+   </nexus>
+   <skills>
+      <attack>
+         <name>Attack</name>
+         <shortname>att</shortname>
+      </attack>
+      <defense>
+         <name>Defense</name>
+         <shortname>def</shortname>
+      </defense>
+      <harvest>
+         <name>Harvest</name>
+         <shortname>har</shortname>
+      </harvest>
+      <alch>
+         <name>Alchemy</name>
+         <shortname>alc</shortname>
+      </alch>
+      <magic>
+         <name>Magic</name>
+         <shortname>mag</shortname>
+      </magic>
+      <potion>
+         <name>Potion</name>
+         <shortname>pot</shortname>
+      </potion>
+      <summon>
+         <name>Summoning</name>
+         <shortname>sum</shortname>
+      </summon>
+      <manu>
+         <name>Manufacturing</name>
+         <shortname>man</shortname>
+      </manu>
+      <crafting>
+         <name>Crafting</name>
+         <shortname>cra</shortname>
+      </crafting>
+      <engineering>
+         <name>Engineering</name>
+         <shortname>eng</shortname>
+      </engineering>
+      <tailoring>
+         <name>Tailoring</name>
+         <shortname>tai</shortname>
+      </tailoring>
+      <overall>
+         <name>Overall</name>
+         <shortname>oa</shortname>
+      </overall>
+   </skills>
 </root>
