Minor changes for package files.

--- a/ol_pkgfiles/ol.x86.linux.bin.6
+++ b/ol_pkgfiles/ol.x86.linux.bin.6
@@ -1,4 +1,4 @@
-.TH OL.X86.LINUX.BIN 6 "Apr 2018" "ol.x86.linux.bin" "Other Life Client"
+.TH OL.X86.LINUX.BIN 6 "April 2018" "ol.x86.linux.bin" "Other Life Client"
 
 .SH NAME
 ol.x86.linux.bin - Client for Other Life, a free MMORPG
@@ -11,7 +11,7 @@ ol.x86.linux.bin - Client for Other Life, a free MMORPG
 
 .SH DESCRIPTION
 Other Life is a free MMORPG (massively multi-player online role playing 
-game).
+game).  Other-Life is based on the Eternal Lands free MMORPG.
 
 
 .SH Web Resources
@@ -35,4 +35,4 @@ https://twinmoons.org.uk/ol_linux_packages.html
 .TP
 
 .SH COPYRIGHT
-Copyright (C) 2003-2018, Radu Privantu and Maura Privantu.
+Eternal Lands Copyright (C) 2003-2018, Radu Privantu and Maura Privantu.
