--- a/ol_pkgfiles/ol.linux.bin.6
+++ b/ol_pkgfiles/ol.linux.bin.6
@@ -1,12 +1,12 @@
-.TH OL.X86.LINUX.BIN 6 "April 2018" "ol.x86.linux.bin" "Other Life Client"
+.TH ol.linux.bin 6 "June 2021" "ol.linux.bin" "Other Life Client"
 
 .SH NAME
-ol.x86.linux.bin - Client for Other Life, a free MMORPG
+ol.linux.bin - Client for Other Life, a free MMORPG
 
 .SH SYNOPSIS
-.B ol.x86.linux.bin
+.B ol.linux.bin
 [
-.I <config name> <tdb other options>
+.I <other options> <config name>
 ]
 
 .SH DESCRIPTION
@@ -18,11 +18,11 @@ game).  Other-Life is based on the Eternal Lands free MMORPG.
 
 .TP
 .I The main website for the game
-http://www.other-life.com/
+https://www.other-life.com/
 
 .TP
 .I Game Forums
-http://www.other-life.com/forums/
+https://www.other-life.com/forums/
 
 .TP
 .I Client Source Code
@@ -32,7 +32,6 @@ https://github.com/pjbroad/other-life
 .I Ubuntu & debian packages
 https://twinmoons.org.uk/ol_linux_packages.html
 
-.TP
 
 .SH COPYRIGHT
-Eternal Lands Copyright (C) 2003-2018, Radu Privantu and Maura Privantu.
+Copyright (C) 2003-2021, Radu Privantu and Maura Privantu.
