--- a/ol_pkgfiles/debs/music/debian/changelog
+++ b/ol_pkgfiles/debs/music/debian/changelog
@@ -1,5 +1,7 @@
-otherlife-music (1.9.3-1ubuntu1) trusty; urgency=low
+otherlife-music (1.9.5.9-0ubuntu1) bionic; urgency=low
 
-  * Initial package version
+  * 1.9.5 release, see CHANGES file at
+      https://github.com/pjbroad/other-life/releases/tag/1.9.5.9
+
 
  -- Paul Broadhead <pjbroad@twinmoons.org.uk>  Mon, 02 Apr 2018 12:00:00 +0100
